structuring and designing the page

--- a/index.html
+++ b/index.html
@@ -2,10 +2,113 @@
 <html>
 <head>
     <title>Yudiel Guerra : Full resume</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-	
+
+    <div id="header-container" class="outer">
+        <header class="inner">
+            <a id="github-account" target="_blank" href="https://github.com/yudielgc/">GitHub account</a>
+            <h1 id="title">Yudiel G : Resume</h1>
+            <h2 id="descline">Web developer based on Davie, FL with over 10 years of experience, lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum.</h2>
+
+            <a id="linkedin-profile" target="_blank" href="https://www.linkedin.com/in/yudiel-guerra-691b1336">LinkedIn profile</a>
+        </header>
+    </div>
+
+    <div id="content-container" class="outer">
+        <section id="main-content" class="inner">
+
+            <h3>Summary</h3>
+            <p>An accomplished Web Developer with over 10 years of experience, specializing in Object-Oriented Programming, design and analysis with extensive experience in the full life cycle of the software design process including requirements definition, prototyping, design, interface implementation, coding, testing and maintenance. Extensive experience handling all layers, from database to services to user interfaces. Highly adaptable in quickly changing technical environments with very strong organizational and analytical skills. Ability to increase reliability, maximize productivity, and introduce system efficiencies. Ability to coordinate multiple detailed projects from initiation to completion in a deadline-driven environment.</p>
+
+            <h3>Technical skills</h3>
+            <p>
+                <ul>
+                    <li>
+                        <code>Technologies:</code> JavaScript, jQuery, RequireJS, AngularJS/MV*, HTML 5/XHTML, CSS/LESS, ASP.NET/ASP.NET MVC/ASP.NET Web API, Amazon Web Services, Object Pascal.
+                    </li>
+                    <li>
+                        <code>Continuous Integration/Deployment:</code> Grunt, Powershell, Chocalatey, TeamCity, Yeoman (yo, Grunt, Bower).
+                    </li>
+                    <li>
+                        <code>Applications:</code> Visual Studio 2003-2013 (including TFS), Sublime Text, Git, Sitecore, Joomla, Dreamweaver, Borland Delphi, Photoshop, CVS, Mercurial.
+                    </li>
+                    <li>
+                        <code>Databases:</code> Microsoft SQL Server 2005/2008, MySQL.
+                    </li>
+                    <li>
+                        <code>Integration:</code> REST Frameworks, Entity Framework, LINQ, nHibernate.
+                    </li>
+                    <li>
+                        <code>Delivery:</code> Cross-browser compatible, Responsive Web Design and Adaptive Web Design, Fluid Grids, Fluid / Adaptive Images, Standards compliant, Progressive Enhancement.
+                    </li>
+                    <li>
+                        <code>Testing:</code> TDD, ATDD, BDD: Unit, Integration and Acceptance testing. Tools: JasmineJS, Specflow, Visual Studio Unit Testing Framework, nUnit.
+                    </li>
+                </ul>
+            </p>
+
+
+            <h3>Experience</h3>
+
+            <p>
+                <h4><a href="https://www.mutualofamerica.com/" target="_blank">Mutual of America</a> 11/2015 - Present</h4>
+                <h4>Senior Web Developer</h4>
+                <ul>
+                    <li>Design, create, test, maintain and troubleshoot Web applications in JavaScript, AngularJS, ASP.NET and C#, utilizing SQL2008.</li>
+                    <li>Design, test, develop, and maintain highly-scalable, fault-tolerant and distributed Web APIs using ASP.NET Web API.</li>
+                    <li>Write and produce software of the highest quality through self-discipline, clear and engaged communication, and attention to detail.</li>
+                    <li>Assist other developers with post development testing and code reviews.</li>
+                </ul>
+            </p>
+
+            <p>
+                <h4>
+                    <a href="http://www.tradestation.com/" target="_blank">TradeStation Technologies, Inc.</a> 9/2013 - 11/2015</h4>
+                <h4>Software Engineer</h4>
+                <ul>
+                    <li>Develop, test, and maintain websites such as our brand-new SaaS project and current applications.</li>
+                    <li>Design and develop web UIs using cutting-edge technologies (AngularJS, KnockoutJS, RWD, LESS).</li>
+                    <li>Design and develop highly-scalable, fault-tolerant and distributed web APIs.</li>
+                    <li>Write and produce software of the highest quality through self-discipline, clear and engaged communication, and attention to detail.</li>
+                    <li>Assist other developers with post development testing and code reviews.</li>
+                    <li>Assist with Quality Assurance and Production software roll outs and troubleshooting.</li>
+                    <li>Scripting and automation (Powershell, Grunt).</li>
+                    <li>Attend and participate in daily scrum and product / feature planning meetings to help estimate time frames, risk, and scope of work in accordance with our agile process.</li>
+                </ul>
+            </p>
+
+            <p>
+                <h4>
+                    <a href="http://www.tradestation.com/" target="_blank">TradeStation Technologies, Inc.</a> 9/2011 - 08/2013
+                </h4>
+                <h4>Agile Tester Engineer</h4>
+                <ul>
+                    <li>Create unit testing solutions and unit tests against web application code.</li>
+                    <li>Create BBD testing solutions and BDD tests against web applications.</li>
+                    <li>Create acceptance and integration testing solutions against web applications.</li>
+                    <li>Provide guidance to the members of the team on TDD and Designing for Testability.</li>
+                    <li>Deployment of web applications to QA as well as support the System Team in deploying them to Staging and Production.</li>
+                    <li>Scripting and automation (Powershell and Windows batch files).</li>
+                    <li>Attend and participate in daily scrum and product / feature planning meetings to help estimate time frames, risk, and scope of work in accordance with our agile process.</li>
+                </ul>
+            </p>
+
+            <p>
+                <h5>Download completed resume from <a href="https://github.com/yudielgc">here</a></h5>
+            </p>
+
+        </section>
+    </div>
+
+    <div id="footer-container" class="outer">
+        <footer class="inner">
+            <p>Maintained by <a href="https://github.com/yudielgc">yudielgc</a> - Published with <a href="https://pages.github.com">GitHub Pages</a></p>
+        </footer>
+    </div>
+
 </body>
 </html>
