link to complete resume in aws bucket

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             </p>
 
             <p>
-                <h5>Download completed resume from <a href="https://github.com/yudielgc">here</a></h5>
+                <h5>Download complete resume from <a href="https://s3.amazonaws.com/yudielgc-repos/resume-yudielgc.pdf" target="_blanket">here</a></h5>
             </p>
 
         </section>
