updating intro for resume page

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <header class="inner">
             <a id="github-account" target="_blank" href="https://github.com/yudielgc/">GitHub account</a>
             <h1 id="title">Yudiel G : Resume</h1>
-            <h2 id="descline">Web developer based on Davie, FL with over 10 years of experience, lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum.</h2>
+            <h2 id="descline">Web developer based in Davie, FL, who loves JavaScript, Front-end development, having a .NET background and good skills working with databases that make him able to work as a Full-stack developer. Keeping the pace to the new web trendings, learning and reading about new web technologies all the time, recently in love with NodeJS.</h2>
 
             <a id="linkedin-profile" target="_blank" href="https://www.linkedin.com/in/yudiel-guerra-691b1336">LinkedIn profile</a>
         </header>
