contact infor for resume page

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Yudiel Guerra : Full resume</title>
+    <title>Yudiel Guerra's resume</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <link rel="stylesheet" href="css/styles.css">
@@ -11,7 +11,7 @@
     <div id="header-container" class="outer">
         <header class="inner">
             <a id="github-account" target="_blank" href="https://github.com/yudielgc/">GitHub account</a>
-            <h1 id="title">Yudiel G : Resume</h1>
+            <h1 id="title">Yudiel's resume</h1>
             <h2 id="descline">Web developer based in Davie, FL, who loves JavaScript, Front-end development, having a .NET background and good skills working with databases that make him able to work as a Full-stack developer. Keeping the pace to the new web trendings, learning and reading about new web technologies all the time, recently in love with NodeJS.</h2>
 
             <a id="linkedin-profile" target="_blank" href="https://www.linkedin.com/in/yudiel-guerra-691b1336">LinkedIn profile</a>
@@ -21,6 +21,15 @@
     <div id="content-container" class="outer">
         <section id="main-content" class="inner">
 
+            <h3>Contact Information</h3>
+            <p>
+                <div>E-mail: <code>yudielgc@gmail.com</code></div>
+                <div>Phone: <code>754-265-3419</code></div>
+                <div><a href="https://github.com/yudielgc" target="_blanket">https://github.com/yudielgc</a></div>
+                <div><a href="https://www.linkedin.com/in/yudiel-guerra-691b1336" target="_blanket">https://www.linkedin.com/in/yudiel-guerra-691b1336</a></div>
+            </p>
+
+
             <h3>Summary</h3>
             <p>An accomplished Web Developer with over 10 years of experience, specializing in Object-Oriented Programming, design and analysis with extensive experience in the full life cycle of the software design process including requirements definition, prototyping, design, interface implementation, coding, testing and maintenance. Extensive experience handling all layers, from database to services to user interfaces. Highly adaptable in quickly changing technical environments with very strong organizational and analytical skills. Ability to increase reliability, maximize productivity, and introduce system efficiencies. Ability to coordinate multiple detailed projects from initiation to completion in a deadline-driven environment.</p>
 
@@ -28,25 +37,25 @@
             <p>
                 <ul>
                     <li>
-                        <code>Technologies:</code> JavaScript, jQuery, RequireJS, AngularJS/MV*, HTML 5/XHTML, CSS/LESS, ASP.NET/ASP.NET MVC/ASP.NET Web API, Amazon Web Services, Object Pascal.
+                        <span>Technologies:</span> <code>JavaScript</code>, <code>jQuery</code>, <code>RequireJS</code>, <code>AngularJS</code>, <code>HTML 5/XHTML</code>, <code>CSS/LESS</code>, <code>ASP.NET</code>/<code>ASP.NET MVC</code>/<code>ASP.NET Web API</code>, <code>Amazon Web Services</code>.
                     </li>
                     <li>
-                        <code>Continuous Integration/Deployment:</code> Grunt, Powershell, Chocalatey, TeamCity, Yeoman (yo, Grunt, Bower).
+                        <span>Continuous Integration/Deployment:</span> <code>Grunt</code>, <code>Powershell</code>, <code>Chocalatey</code>, <code>TeamCity</code>, <code>Yeoman</code>.
                     </li>
                     <li>
-                        <code>Applications:</code> Visual Studio 2003-2013 (including TFS), Sublime Text, Git, Sitecore, Joomla, Dreamweaver, Borland Delphi, Photoshop, CVS, Mercurial.
+                        <span>Applications:</span> <code>Visual Studio 2003-2015 (including TFS)</code>, <code>Sublime Text</code>, <code>Git</code>, <code>Sitecore</code>, <code>Joomla</code>, <code>Dreamweaver</code>, <code>Borland Delphi</code>, <code>Photoshop</code>, <code>CVS</code>, <code>Mercurial</code>.
                     </li>
                     <li>
-                        <code>Databases:</code> Microsoft SQL Server 2005/2008, MySQL.
+                        <span>Databases:</span> <code>Microsoft SQL Server 2005/2008</code>, <code>MySQL</code>.
                     </li>
                     <li>
-                        <code>Integration:</code> REST Frameworks, Entity Framework, LINQ, nHibernate.
+                        <span>Integration:</span> <code>REST Frameworks</code>, <code>Entity Framework</code>, <code>LINQ</code>, <code>nHibernate</code>.
                     </li>
                     <li>
-                        <code>Delivery:</code> Cross-browser compatible, Responsive Web Design and Adaptive Web Design, Fluid Grids, Fluid / Adaptive Images, Standards compliant, Progressive Enhancement.
+                        <span>Delivery:</span> <code>Cross-browser compatible</code>, <code>Responsive Web Design</code>, <code>Fluid Grids</code>, <code>Fluid</code> / <code>Adaptive Images</code>, <code>Standards compliant</code>, <code>Progressive Enhancement</code>.
                     </li>
                     <li>
-                        <code>Testing:</code> TDD, ATDD, BDD: Unit, Integration and Acceptance testing. Tools: JasmineJS, Specflow, Visual Studio Unit Testing Framework, nUnit.
+                        <span>Testing:</span> <code>TDD</code>, <code>ATDD</code>, <code>BDD</code>: <code>Unit</code>, <code>Integration and Acceptance testing</code>. <span>Tools:</span> <code>JasmineJS</code>, <code>Specflow</code>, <code>Visual Studio Unit Testing Framework</code>, <code>nUnit</code>.
                     </li>
                 </ul>
             </p>
